--- a/package.json
+++ b/package.json
@@ -26,10 +26,13 @@
     "ci": "npm run build && npm run check-format && npm run check-exports && npm run lint && npm run test",
     "format": "prettier --write .",
     "check-format": "prettier --check .",
+    "fix-format": "prettier --write .",
     "check-exports": "attw --pack . --ignore-rules=cjs-resolves-to-esm",
     "lint": "tsc",
     "test": "vitest run",
-    "dev": "vitest"
+    "dev": "vitest",
+    "local-release": "changeset version && changeset publish",
+    "prepublishOnly": "npm run ci"
   },
   "exports": {
     "./package.json": "./package.json",
@@ -40,7 +43,6 @@
   },
   "devDependencies": {
     "@arethetypeswrong/cli": "^0.16.4",
-    "@changesets/cli": "^2.27.8",
     "prettier": "^3.3.3",
     "vitest": "^2.1.1"
   }
