--- a/package.json
+++ b/package.json
@@ -47,5 +47,9 @@
     "prettier": "^3.3.3",
     "typescript": "^5.6.2",
     "vitest": "^2.1.1"
+  },
+  "dependencies": {
+    "nanoid": "^5.0.7",
+    "rxjs": "^7.8.1"
   }
 }
