--- a/package.json
+++ b/package.json
@@ -44,11 +44,13 @@
   "devDependencies": {
     "@arethetypeswrong/cli": "^0.16.4",
     "@changesets/cli": "^2.27.8",
+    "@types/lodash-es": "^4.17.12",
     "prettier": "^3.3.3",
     "typescript": "^5.6.2",
     "vitest": "^2.1.1"
   },
   "dependencies": {
+    "lodash-es": "^4.17.21",
     "nanoid": "^5.0.7",
     "rxjs": "^7.8.1"
   }
