--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@arethetypeswrong/cli": "^0.16.4",
     "@changesets/cli": "^2.27.8",
     "@types/lodash-es": "^4.17.12",
+    "jsdom": "^25.0.1",
     "prettier": "^3.3.3",
     "typescript": "^5.6.2",
     "vitest": "^2.1.1"
